tests/baselines/reference/parserParameterList6.errors.txt
==== tests/cases/compiler/parserParameterList6.ts (1 errors) ====
    class C {
      constructor(C: (public A) => any) {
                      ~~~~~~
!!! parserParameterList6.ts(2,19): error TS2246: A parameter property is only allowed in a constructor implementation.
      }
    }